@@ -5,7 +5,8 @@ Changelog for minitage.core
 2.0.30 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- support py27
+- Force run buildout in upgrade mode for dependencies and eggs packages
 
 
 2.0.29 (2012-03-05)
